control-plane/ingress/superseded--nginx-ingress-controller/controller-ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  # this name must match the --ingress-class flag
  name: nginx
  namespace: ingress-nginx
  annotations:
  # optional: flag this as default ingclass
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: "k8s.io/ingress-nginx" # this is a hard-coded into nginx-ingress
