control-plane/ingress/superseded--nginx-ingress-controller/ingress-metadig.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: metadig
  annotations:
    #kubernetes.io/ingress.class: nginx
    #kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: '$http_origin'
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - docker-ucsb-4.dataone.org
    secretName: ingress-nginx-tls-cert
  rules:
  - host: docker-ucsb-4.dataone.org
    http:
      paths:
      - path: /quality
        pathType: Prefix
        backend:
          service:
            name: metadig-controller
            #namespace: metadig
            port:
              number: 8080
